// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/github/edges createEdge works for authors edges 1`] = `"{address: EdgeAddress[\\"sourcecred\\",\\"github\\",\\"AUTHORS\\",\\"2\\",\\"USERLIKE\\",\\"decentralion\\",\\"4\\",\\"ISSUE\\",\\"sourcecred\\",\\"example-github\\",\\"2\\"], src: NodeAddress[\\"sourcecred\\",\\"github\\",\\"USERLIKE\\",\\"decentralion\\"], dst: NodeAddress[\\"sourcecred\\",\\"github\\",\\"ISSUE\\",\\"sourcecred\\",\\"example-github\\",\\"2\\"]}"`;

exports[`plugins/github/edges createEdge works for has-parent edges 1`] = `"{address: EdgeAddress[\\"sourcecred\\",\\"github\\",\\"HAS_PARENT\\",\\"7\\",\\"COMMENT\\",\\"REVIEW\\",\\"sourcecred\\",\\"example-github\\",\\"5\\",\\"100313899\\",\\"171460198\\"], src: NodeAddress[\\"sourcecred\\",\\"github\\",\\"COMMENT\\",\\"REVIEW\\",\\"sourcecred\\",\\"example-github\\",\\"5\\",\\"100313899\\",\\"171460198\\"], dst: NodeAddress[\\"sourcecred\\",\\"github\\",\\"REVIEW\\",\\"sourcecred\\",\\"example-github\\",\\"5\\",\\"100313899\\"]}"`;

exports[`plugins/github/edges createEdge works for merged-as edges 1`] = `"{address: EdgeAddress[\\"sourcecred\\",\\"github\\",\\"MERGED_AS\\",\\"4\\",\\"PULL\\",\\"sourcecred\\",\\"example-github\\",\\"5\\"], src: NodeAddress[\\"sourcecred\\",\\"github\\",\\"PULL\\",\\"sourcecred\\",\\"example-github\\",\\"5\\"], dst: NodeAddress[\\"git\\",\\"commit\\",\\"123\\"]}"`;

exports[`plugins/github/edges createEdge works for reference edges 1`] = `"{address: EdgeAddress[\\"sourcecred\\",\\"github\\",\\"REFERENCES\\",\\"4\\",\\"ISSUE\\",\\"sourcecred\\",\\"example-github\\",\\"2\\",\\"4\\",\\"PULL\\",\\"sourcecred\\",\\"example-github\\",\\"5\\"], src: NodeAddress[\\"sourcecred\\",\\"github\\",\\"ISSUE\\",\\"sourcecred\\",\\"example-github\\",\\"2\\"], dst: NodeAddress[\\"sourcecred\\",\\"github\\",\\"PULL\\",\\"sourcecred\\",\\"example-github\\",\\"5\\"]}"`;

exports[`plugins/github/edges snapshots as expected: authors 1`] = `
Object {
  "address": Array [
    "sourcecred",
    "github",
    "AUTHORS",
    "2",
    "USERLIKE",
    "decentralion",
    "4",
    "PULL",
    "sourcecred",
    "example-github",
    "5",
  ],
  "structured": Object {
    "author": Object {
      "login": "decentralion",
      "type": "USERLIKE",
    },
    "content": Object {
      "number": "5",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "PULL",
    },
    "type": "AUTHORS",
  },
}
`;

exports[`plugins/github/edges snapshots as expected: hasParent 1`] = `
Object {
  "address": Array [
    "sourcecred",
    "github",
    "HAS_PARENT",
    "7",
    "COMMENT",
    "REVIEW",
    "sourcecred",
    "example-github",
    "5",
    "100313899",
    "171460198",
  ],
  "structured": Object {
    "child": Object {
      "id": "171460198",
      "parent": Object {
        "id": "100313899",
        "pull": Object {
          "number": "5",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "PULL",
        },
        "type": "REVIEW",
      },
      "type": "COMMENT",
    },
    "type": "HAS_PARENT",
  },
}
`;

exports[`plugins/github/edges snapshots as expected: mergedAs 1`] = `
Object {
  "address": Array [
    "sourcecred",
    "github",
    "MERGED_AS",
    "4",
    "PULL",
    "sourcecred",
    "example-github",
    "5",
  ],
  "structured": Object {
    "pull": Object {
      "number": "5",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "PULL",
    },
    "type": "MERGED_AS",
  },
}
`;

exports[`plugins/github/edges snapshots as expected: references 1`] = `
Object {
  "address": Array [
    "sourcecred",
    "github",
    "REFERENCES",
    "4",
    "ISSUE",
    "sourcecred",
    "example-github",
    "2",
    "4",
    "ISSUE",
    "sourcecred",
    "example-github",
    "1",
  ],
  "structured": Object {
    "referent": Object {
      "number": "1",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "ISSUE",
    },
    "referrer": Object {
      "number": "2",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "ISSUE",
    },
    "type": "REFERENCES",
  },
}
`;
